@@ -101,11 +101,9 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     /**
-     * Subclass that should inherit rules from {@link org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestBaseClass} via hierarchy lookup.
+     * Subclass that should inherit rules from {@link InstrumenterTests.TestBaseClass} via hierarchy lookup.
      */
-    public static class TestSubClass extends org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestBaseClass
-        implements
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.Testable {
+    public static class TestSubClass extends InstrumenterTests.TestBaseClass implements InstrumenterTests.Testable {
         @Override
         public void inheritableMethod(int arg) {}
 
@@ -183,10 +181,7 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     /** Class implementing both unrelated interfaces, creating a conflicting inherited rule scenario. */
-    public static class TestConflictingSubclass
-        implements
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestInterfaceA,
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestInterfaceB {
+    public static class TestConflictingSubclass implements InstrumenterTests.TestInterfaceA, InstrumenterTests.TestInterfaceB {
         @Override
         public void sharedMethod(int arg) {}
     }
@@ -319,18 +314,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethod() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethod",
-                int.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethod", int.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingVoidStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethod,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingVoidStatic(InstrumenterTests.TestClassToInstrument::someStaticMethod, Integer.class)
                 .enforce(verifier)
                 .elseThrowNotEntitled()
         );
@@ -346,30 +335,24 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testNotInstrumentedTwice() throws Exception {
-        var targetMethod = org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-            "someStaticMethod",
-            int.class
-        );
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(targetMethod);
+        var targetMethod = InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethod", int.class);
+        var verifier = new InstrumenterTests.TestVerifier(targetMethod);
         var loader1 = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingVoidStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethod,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingVoidStatic(InstrumenterTests.TestClassToInstrument::someStaticMethod, Integer.class)
                 .enforce(verifier)
                 .elseThrowNotEntitled()
         );
 
         var instrumenter = loader1.getInstrumenter();
         var instrumentedTwiceBytes = instrumenter.instrumentClass(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getName(),
+            InstrumenterTests.TestClassToInstrument.class.getName(),
             loader1.testClassBytes,
             true
         );
         logger.trace(() -> Strings.format("Bytecode after 2nd instrumentation:\n%s", bytecode2text(instrumentedTwiceBytes)));
-        var loader2 = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestLoader(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getName(),
+        var loader2 = new InstrumenterTests.TestLoader(
+            InstrumenterTests.TestClassToInstrument.class.getName(),
             instrumentedTwiceBytes,
             instrumenter
         );
@@ -380,30 +363,18 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testMultipleMethods() throws Exception {
-        var verifier1 = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethod",
-                int.class
-            )
+        var verifier1 = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethod", int.class)
         );
-        var verifier2 = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "anotherStaticMethod",
-                int.class
-            )
+        var verifier2 = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("anotherStaticMethod", int.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingVoidStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethod,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingVoidStatic(InstrumenterTests.TestClassToInstrument::someStaticMethod, Integer.class)
                 .enforce(verifier1)
                 .elseThrowNotEntitled()
-                .callingVoidStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::anotherStaticMethod,
-                    Integer.class
-                )
+                .callingVoidStatic(InstrumenterTests.TestClassToInstrument::anotherStaticMethod, Integer.class)
                 .enforce(verifier2)
                 .elseThrowNotEntitled()
         );
@@ -416,32 +387,18 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodOverload() throws Exception {
-        var verifier1 = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethod",
-                int.class
-            )
+        var verifier1 = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethod", int.class)
         );
-        var verifier2 = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethod",
-                int.class,
-                String.class
-            )
+        var verifier2 = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethod", int.class, String.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingVoidStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethod,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingVoidStatic(InstrumenterTests.TestClassToInstrument::someStaticMethod, Integer.class)
                 .enforce(verifier1)
                 .elseThrowNotEntitled()
-                .callingVoidStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethod,
-                    Integer.class,
-                    String.class
-                )
+                .callingVoidStatic(InstrumenterTests.TestClassToInstrument::someStaticMethod, Integer.class, String.class)
                 .enforce(verifier2)
                 .elseThrowNotEntitled()
         );
@@ -453,20 +410,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodOverload() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethod",
-                int.class,
-                String.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethod", int.class, String.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingVoid(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethod,
-                    Integer.class,
-                    String.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingVoid(InstrumenterTests.TestClassToInstrument::someMethod, Integer.class, String.class)
                 .enforce(verifier)
                 .elseThrowNotEntitled()
         );
@@ -480,16 +429,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnBoolean() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningFalse"
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningFalse")
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningFalse
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningFalse)
                 .enforce(verifier)
                 .elseReturn(true)
         );
@@ -505,16 +450,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnBoolean() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningFalse"
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningFalse")
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningFalse
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningFalse)
                 .enforce(verifier)
                 .elseReturn(true)
         );
@@ -533,18 +474,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnString() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningString",
-                String.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningString", String.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningString,
-                    String.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningString, String.class)
                 .enforce(verifier)
                 .elseReturn("overridden")
         );
@@ -558,18 +493,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnString() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningString",
-                String.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningString", String.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningString,
-                    String.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningString, String.class)
                 .enforce(verifier)
                 .elseReturn("overridden")
         );
@@ -585,18 +514,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnInt() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningInt",
-                int.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningInt", int.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningInt,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningInt, Integer.class)
                 .enforce(verifier)
                 .elseReturn(99)
         );
@@ -610,18 +533,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnInt() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningInt",
-                int.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningInt", int.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningInt,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningInt, Integer.class)
                 .enforce(verifier)
                 .elseReturn(99)
         );
@@ -637,18 +554,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnLong() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningLong",
-                long.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningLong", long.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningLong,
-                    Long.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningLong, Long.class)
                 .enforce(verifier)
                 .elseReturn(99L)
         );
@@ -662,18 +573,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnLong() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningLong",
-                long.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningLong", long.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningLong,
-                    Long.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningLong, Long.class)
                 .enforce(verifier)
                 .elseReturn(99L)
         );
@@ -689,18 +594,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnFloat() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningFloat",
-                float.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningFloat", float.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningFloat,
-                    Float.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningFloat, Float.class)
                 .enforce(verifier)
                 .elseReturn(99.5f)
         );
@@ -714,18 +613,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnFloat() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningFloat",
-                float.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningFloat", float.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningFloat,
-                    Float.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningFloat, Float.class)
                 .enforce(verifier)
                 .elseReturn(99.5f)
         );
@@ -741,18 +634,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnDouble() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningDouble",
-                double.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningDouble", double.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningDouble,
-                    Double.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningDouble, Double.class)
                 .enforce(verifier)
                 .elseReturn(99.5)
         );
@@ -766,18 +653,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnDouble() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningDouble",
-                double.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningDouble", double.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningDouble,
-                    Double.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningDouble, Double.class)
                 .enforce(verifier)
                 .elseReturn(99.5)
         );
@@ -793,21 +674,14 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testConstructors() throws Exception {
-        var verifier1 = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getConstructor()
-        );
-        var verifier2 = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getConstructor(int.class)
-        );
+        var verifier1 = new InstrumenterTests.TestVerifier(InstrumenterTests.TestClassToInstrument.class.getConstructor());
+        var verifier2 = new InstrumenterTests.TestVerifier(InstrumenterTests.TestClassToInstrument.class.getConstructor(int.class));
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::new)
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::new)
                 .enforce(verifier1)
                 .elseThrowNotEntitled()
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::new,
-                    Integer.class
-                )
+                .callingStatic(InstrumenterTests.TestClassToInstrument::new, Integer.class)
                 .enforce(verifier2)
                 .elseThrowNotEntitled()
         );
@@ -819,18 +693,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnEarly() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodWithSideEffects",
-                AtomicInteger.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodWithSideEffects", AtomicInteger.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingVoidStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodWithSideEffects,
-                    AtomicInteger.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingVoidStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodWithSideEffects, AtomicInteger.class)
                 .enforce(verifier)
                 .elseReturnEarly()
         );
@@ -848,18 +716,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnEarly() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodWithSideEffects",
-                AtomicInteger.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodWithSideEffects", AtomicInteger.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingVoid(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodWithSideEffects,
-                    AtomicInteger.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingVoid(InstrumenterTests.TestClassToInstrument::someMethodWithSideEffects, AtomicInteger.class)
                 .enforce(verifier)
                 .elseReturnEarly()
         );
@@ -878,18 +740,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgString() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningString",
-                String.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningString", String.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningString,
-                    String.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningString, String.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -905,18 +761,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgInt() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningInt",
-                int.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningInt", int.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningInt,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningInt, Integer.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -932,18 +782,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgString() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningString",
-                String.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningString", String.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningString,
-                    String.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningString, String.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -961,18 +805,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgInt() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningInt",
-                int.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningInt", int.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningInt,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningInt, Integer.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -990,18 +828,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgBoolean() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningBoolean",
-                boolean.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningBoolean", boolean.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningBoolean,
-                    Boolean.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningBoolean, Boolean.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1015,18 +847,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgBoolean() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningBoolean",
-                boolean.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningBoolean", boolean.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningBoolean,
-                    Boolean.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningBoolean, Boolean.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1042,18 +868,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgByte() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningByte",
-                byte.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningByte", byte.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningByte,
-                    Byte.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningByte, Byte.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1067,18 +887,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgByte() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningByte",
-                byte.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningByte", byte.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningByte,
-                    Byte.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningByte, Byte.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1094,18 +908,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgShort() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningShort",
-                short.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningShort", short.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningShort,
-                    Short.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningShort, Short.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1119,18 +927,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgShort() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningShort",
-                short.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningShort", short.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningShort,
-                    Short.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningShort, Short.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1146,18 +948,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgChar() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningChar",
-                char.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningChar", char.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningChar,
-                    Character.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningChar, Character.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1171,18 +967,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgChar() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningChar",
-                char.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningChar", char.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningChar,
-                    Character.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningChar, Character.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1198,18 +988,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgLong() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningLong",
-                long.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningLong", long.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningLong,
-                    Long.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningLong, Long.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1223,18 +1007,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgLong() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningLong",
-                long.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningLong", long.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningLong,
-                    Long.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningLong, Long.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1250,18 +1028,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgFloat() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningFloat",
-                float.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningFloat", float.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningFloat,
-                    Float.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningFloat, Float.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1275,18 +1047,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgFloat() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningFloat",
-                float.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningFloat", float.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningFloat,
-                    Float.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningFloat, Float.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1302,18 +1068,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testStaticMethodReturnArgDouble() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someStaticMethodReturningDouble",
-                double.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someStaticMethodReturningDouble", double.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .callingStatic(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someStaticMethodReturningDouble,
-                    Double.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .callingStatic(InstrumenterTests.TestClassToInstrument::someStaticMethodReturningDouble, Double.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1327,18 +1087,12 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     public void testInstanceMethodReturnArgDouble() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class.getMethod(
-                "someMethodReturningDouble",
-                double.class
-            )
+        var verifier = new InstrumenterTests.TestVerifier(
+            InstrumenterTests.TestClassToInstrument.class.getMethod("someMethodReturningDouble", double.class)
         );
         var loader = buildInstrumentation(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class)
-                .calling(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument::someMethodReturningDouble,
-                    Double.class
-                )
+            builder -> builder.on(InstrumenterTests.TestClassToInstrument.class)
+                .calling(InstrumenterTests.TestClassToInstrument::someMethodReturningDouble, Double.class)
                 .enforce(verifier)
                 .elseReturnArg(0)
         );
@@ -1357,18 +1111,10 @@ public class InstrumenterTests extends ESTestCase {
      * Verifies that a rule defined on a base class is applied to a subclass method via hierarchy lookup.
      */
     public void testInheritedRuleFromSuperclass() throws Exception {
-        var verifier = new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestVerifier(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestBaseClass.class.getMethod(
-                "inheritableMethod",
-                int.class
-            )
-        );
+        var verifier = new InstrumenterTests.TestVerifier(InstrumenterTests.TestBaseClass.class.getMethod("inheritableMethod", int.class));
         var loader = buildInstrumentationForSubclass(
-            builder -> builder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestBaseClass.class)
-                .callingVoid(
-                    org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestBaseClass::inheritableMethod,
-                    Integer.class
-                )
+            builder -> builder.on(InstrumenterTests.TestBaseClass.class)
+                .callingVoid(InstrumenterTests.TestBaseClass::inheritableMethod, Integer.class)
                 .enforce(verifier)
                 .elseThrowNotEntitled()
         );
@@ -1386,45 +1132,38 @@ public class InstrumenterTests extends ESTestCase {
         InstrumentationRegistryImpl reg = new InstrumentationRegistryImpl(null);
         EntitlementRulesBuilder rulesBuilder = new EntitlementRulesBuilder(reg);
 
-        rulesBuilder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestInterfaceA.class)
-            .callingVoid(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestInterfaceA::sharedMethod, Integer.class)
+        rulesBuilder.on(InstrumenterTests.TestInterfaceA.class)
+            .callingVoid(InstrumenterTests.TestInterfaceA::sharedMethod, Integer.class)
             .enforce(Policies::empty)
             .elseThrowNotEntitled();
-        rulesBuilder.on(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestInterfaceB.class)
-            .callingVoid(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestInterfaceB::sharedMethod, Integer.class)
+        rulesBuilder.on(InstrumenterTests.TestInterfaceB.class)
+            .callingVoid(InstrumenterTests.TestInterfaceB::sharedMethod, Integer.class)
             .enforce(Policies::empty)
             .elseThrowNotEntitled();
 
-        org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.registry = reg;
+        InstrumenterTests.registry = reg;
         InstrumenterImpl instrumenter = new InstrumenterImpl(
-            Type.getType(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.class).getInternalName(),
+            Type.getType(InstrumenterTests.class).getInternalName(),
             Type.getMethodDescriptor(Type.getType(InstrumentationRegistry.class)),
             reg.getInstrumentedMethods()
         );
 
-        expectThrows(
-            AssertionError.class,
-            () -> instrumentTestClass(
-                instrumenter,
-                org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestConflictingSubclass.class
-            )
-        );
+        expectThrows(AssertionError.class, () -> instrumentTestClass(instrumenter, InstrumenterTests.TestConflictingSubclass.class));
     }
 
-    private static org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestLoader buildInstrumentationForSubclass(
-        Consumer<EntitlementRulesBuilder> builderConsumer
-    ) throws Exception {
+    private static InstrumenterTests.TestLoader buildInstrumentationForSubclass(Consumer<EntitlementRulesBuilder> builderConsumer)
+        throws Exception {
         InstrumentationRegistryImpl registry = new InstrumentationRegistryImpl(null);
         EntitlementRulesBuilder rulesBuilder = new EntitlementRulesBuilder(registry);
         builderConsumer.accept(rulesBuilder);
-        org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.registry = registry;
+        InstrumenterTests.registry = registry;
         InstrumenterImpl instrumenter = new InstrumenterImpl(
-            Type.getType(org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.class).getInternalName(),
+            Type.getType(InstrumenterTests.class).getInternalName(),
             Type.getMethodDescriptor(Type.getType(InstrumentationRegistry.class)),
             registry.getInstrumentedMethods()
         );
 
-        return instrumentTestClass(instrumenter, org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestSubClass.class);
+        return instrumentTestClass(instrumenter, InstrumenterTests.TestSubClass.class);
     }
 
     private static InstrumenterTests.TestLoader buildInstrumentation(Consumer<EntitlementRulesBuilder> builderConsumer) throws Exception {
@@ -1442,25 +1181,15 @@ public class InstrumenterTests extends ESTestCase {
     }
 
     private static TestLoader instrumentTestClass(InstrumenterImpl instrumenter) throws IOException {
-        return instrumentTestClass(
-            instrumenter,
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestClassToInstrument.class
-        );
+        return instrumentTestClass(instrumenter, InstrumenterTests.TestClassToInstrument.class);
     }
 
-    private static org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestLoader instrumentTestClass(
-        InstrumenterImpl instrumenter,
-        Class<?> clazz
-    ) throws IOException {
+    private static InstrumenterTests.TestLoader instrumentTestClass(InstrumenterImpl instrumenter, Class<?> clazz) throws IOException {
         byte[] newBytecode = instrumenter.instrumentClass(Type.getInternalName(clazz), getClassBytecode(clazz), true);
         if (logger.isTraceEnabled()) {
             logger.trace("Bytecode after instrumentation:\n{}", bytecode2text(newBytecode));
         }
-        return new org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestLoader(
-            clazz.getName(),
-            newBytecode,
-            instrumenter
-        );
+        return new InstrumenterTests.TestLoader(clazz.getName(), newBytecode, instrumenter);
     }
 
     private static byte[] getClassBytecode(Class<?> clazz) throws IOException {
@@ -1504,9 +1233,8 @@ public class InstrumenterTests extends ESTestCase {
             }
         }
 
-        org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.Testable newInstance() throws Exception {
-            return (org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.Testable) (testClass.getConstructor()
-                .newInstance());
+        InstrumenterTests.Testable newInstance() throws Exception {
+            return (InstrumenterTests.Testable) (testClass.getConstructor().newInstance());
         }
 
         Instrumenter getInstrumenter() {
@@ -1550,10 +1278,7 @@ public class InstrumenterTests extends ESTestCase {
             assertArrayEquals(args, calledArgs);
         }
 
-        public Object assertStaticMethod(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestLoader loader,
-            Object... args
-        ) {
+        public Object assertStaticMethod(InstrumenterTests.TestLoader loader, Object... args) {
             if (executable instanceof Method method) {
                 Method testMethod = loader.getSameMethod(method);
                 Object result = callStaticMethod(testMethod, args);
@@ -1566,10 +1291,7 @@ public class InstrumenterTests extends ESTestCase {
             }
         }
 
-        public void assertStaticMethodThrows(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestLoader loader,
-            Object... args
-        ) {
+        public void assertStaticMethodThrows(InstrumenterTests.TestLoader loader, Object... args) {
             if (executable instanceof Method method) {
                 Method testMethod = loader.getSameMethod(method);
                 assertThrows(NotEntitledException.class, () -> callStaticMethod(testMethod, args));
@@ -1581,10 +1303,7 @@ public class InstrumenterTests extends ESTestCase {
             }
         }
 
-        public void assertCtorThrows(
-            org.elasticsearch.entitlement.instrumentation.impl.InstrumenterTests.TestLoader loader,
-            Object... args
-        ) {
+        public void assertCtorThrows(InstrumenterTests.TestLoader loader, Object... args) {
             if (executable instanceof Constructor<?> ctor) {
                 Constructor<?> testConstructor = loader.getSameConstructor(ctor);
                 assertThrows(NotEntitledException.class, () -> {
